LK011 add modal to create a trip

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -51,7 +51,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">
                 <i class="fas fa-plus"></i>
                 Create
             </a>
@@ -71,4 +71,39 @@
     </ul>
 
 </nav>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="z-index: 99999">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Create your trip</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="recipient-name" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="recipient-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="message-text" class="col-form-label">Message:</label>
+                        <textarea class="form-control" id="message-text"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="mr-sm-2">Departure </label>
+                        <select class="form-control" id="destination_select">
+                            <option disabled>Departure...</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Create a trip</button>
+            </div>
+        </div>
+    </div>
+</div>
 </html>
