LK011 continue work on trip modal selection

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -101,7 +101,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Create a trip</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Create a trip</button>
             </div>
         </div>
     </div>
