--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -35,7 +35,7 @@
             </ul>
         </li>
         <li>
-            <a href="#tripMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+            <a href="#tripMenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" id="trip_toggle">
                 <i class="fas fa-forward"></i>
                 Trip
             </a>
@@ -105,7 +105,7 @@
                     <div class="form-group">
                         <label class="mr-sm-2">Departure </label>
                         <select class="form-control" id="destination_select">
-                            <option disabled>Departure...</option>
+                            <option disabled selected>Departure...</option>
                         </select>
                     </div>
                 </form>
