--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         });
 
     </script>
+    <script src="scripts/collectTrainData.js"></script>
     <script src="scripts/navigation.js"></script>
     <!-- Additional scripts -->
     <script src="scripts/generalMap.js"></script>
