--- a/destination.html
+++ b/destination.html
@@ -60,47 +60,47 @@
 <div class="wrapper">
     <div id="side-nav"></div>
     <div id="content">
-
+        <div id="top-nav"></div>
+        <div class="se-pre-con"></div>
         <!-- START CONTENT  -->
-        <div class="background" style="width:100%;">
-            <div class="se-pre-con"></div>
-                    <div class="container-flex" id="background" style="no-repeat center fixed; min-height: 100vh; background-position: center; background-size: cover">
-                        <div class ="stick" id="top-nav" style="z-index: 2;opacity: 0.6;position: sticky;"></div>
+        <div class="background">
+                    <div class="container-flex h-100" id="background" style="no-repeat center fixed; min-height: 90vh; background-position: center; background-size: cover">
                         <div class="row h-50">
-                            <div class="col-8">
-                                <h1 class="text-center text-uppercase text-white font-weight-bold" id="city_welcome"></h1>
-                            </div>
+                            <div class="col-5">
+                                <h1 class="text-center text-uppercase text-white font-weight-bold" id="city_welcome">Bienvenue à </h1></div>
+                            <div class="col-6 col-md-4">
+                                <h2 class="text-center text-white font-weight-normal"></h2></div>
                         </div>
                         <div class="row h-100">
-                            <div class="mx-auto col-sm-4 text-left col-sm-offset-1">
+                            <div class="mx-auto col-sm-4 text-center col-sm-offset-1">
                                 <p></p>
-                                <a class="btn btn-primary btn-lg js-scroll-trigger" style="background-color:#6d7fcc;border:none;" id="items-link" href="#items_container" >C'est beau ! Montre moi en plus !</a>
+                                <a class="btn btn-primary btn-lg js-scroll-trigger" id="items-link" href="#items_container" >C'est beau ! Montre moi en plus !</a>
                                 <p></p>
-                                <a class="btn btn-primary btn-lg js-scroll-trigger" style="background-color:#6d7fcc;border:none;" id="beer_link" href="#beer_container">Et où est la bodega ?</a>
+                                <a class="btn btn-primary btn-lg js-scroll-trigger" id="beer_link" href="#biere">Et où est la bodega ?</a>
                                 <p></p>
-                                <div class="row">
-                                    <div class="card weather" style="max-width: 20rem; max-height: 15rem;">
-                                        <div class="card-header text-center font-weight-bold" id="w_1">
+                                <div class="card-deck">
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_1">
 
                                         </div>
                                         <img class="card-img-top" id="icon_1"  src="" alt="">
-                                        <div class="card-body text-center">
+                                        <div class="card-body">
                                             <h4 id="temp_1"></h4>
                                         </div>
                                     </div>
-                                    <div class="card weather md-4" style="max-width: 20rem; max-height: 15rem;">
-                                        <div class="card-header text-center font-weight-bold" id="w_2">
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_2">
                                         </div>
                                         <img class="card-img-top" id="icon_2" src="" alt="">
-                                        <div class="card-body text-center">
+                                        <div class="card-body">
                                             <h4 id="temp_2"></h4>
                                         </div>
                                     </div>
-                                    <div class="card weather md-4" style="max-width: 20rem; max-height: 15rem;">
-                                        <div class="card-header text-center font-weight-bold" id="w_3">
+                                    <div class="card" style="max-width: 20rem; height: 15rem;">
+                                        <div class="card-header" id="w_3">
                                         </div>
                                         <img class="card-img-top" id="icon_3" src="" alt="">
-                                        <div class="card-body text-center">
+                                        <div class="card-body">
                                             <h4 id="temp_3"></h4>
                                         </div>
                                     </div>
@@ -118,9 +118,30 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                 <div class="container-flex" id="beer_container" style="background: url(images/icons/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
+                    <div class = "container-flex" id="news_container">
+                        <div id="carouselExampleSlidesOnly" style="padding: 3em 3em 3em 3em; max-width: 50em; max-height: 50em; margin-left:5em; margin-right:5em"class="carousel slide" data-ride="carousel">
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img class="d-block w-100" id="news_img_1" alt="">
+                                <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_1"></label></h3>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_1"></label></p>
+                            </div>
+                            <div class="carousel-item">
+                              <img class="d-block w-100" id="news_img_2" alt="">
+                                <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_2"></label></h3>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_2"></label></p>
+                            </div>
+                            <div class="carousel-item">
+                              <img class="d-block w-100" id="news_img_3" alt="">
+                                <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_3"></label></h3>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_3"></label></p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    </div>
+                 <section class="container-flex" id="beer_container" style="background: url(images/icons/bar.jpg) no-repeat center center fixed; min-height : 100vh; background-position: center; background-size: cover;">
                         <div class="container">
                             <div class="row"><div class="col-12"><p></p></div></div>
                             <div class="row justify-content-center" >
@@ -129,11 +150,12 @@
                                     <hr class="divider light my-4" />
                                 </div>
                             </div>
-                            <div class="row" id="test">
+                            <div class="row">
                                 <div class="col col-sm-8">
-                                    <div class="map bar" id="map"></div>
+                                    <div class="folium-map bar" id="map"></div>
                                 </div>
                                 <div class="col col-sm-4">
+                                    <div class ='d-flex justify-content-between'>
                                     <div class="md-auto col">
                                         <div class="card" style="min-width: 300px; background-color: rgba(255, 255, 255, 0.6)">
                                             <p style="margin: 10px"><strong>Prix moyen de la pinte</strong><br>
@@ -145,15 +167,15 @@
                                                 <span style="margin-left : 5px">Hors HH : <label id="min_nHH"></label> euros </span>
                                             </p>
                                             <p id="ranking_label" style="margin: 10px;overflow: hidden;"><strong>Les favorites :</strong><br>
-                                            <p class="disable-scrollbars" style="margin-left : 75px;overflow-y: scroll ;max-height: 50px;" id="ranking"></p>
+                                                <p class="disable-scrollbars" style="margin-left : 75px;overflow-y: scroll ;max-height: 50px;" id="ranking"></p>
                                             </p>
                                         </div>
                                     </div>
-
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </section>
 
             <div id="items_container">
             <script>$(function() {
@@ -169,8 +191,8 @@
                     });
                     });
             </script>
-            <div class="row" id="test2"></div>
-            <div class="container mx-auto"style=" background-color: rgba(255, 255, 255, 0.6)">
+            <div class="row"></div>
+            <div class="container mx-auto" style="width: 150vh; background-color: rgba(255, 255, 255, 0.6)">
                 <div class="row">
                     <div class="col-md-12 d-flex justify-content-center mb-5">
                         <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="all">All</button>
