LK017: HTML modif on news carrousel

--- a/destination.html
+++ b/destination.html
@@ -119,23 +119,23 @@
                             </div>
                         </div>
 
-                    <div class = "container-flex" id="news_container">
-                        <div id="carouselExampleSlidesOnly" style="padding: 3em 3em 3em 3em; max-width: 50em; max-height: 50em; margin-left:5em; margin-right:5em"class="carousel slide" data-ride="carousel">
+                    <div class = "container-flex" style="min-height: 40em; max-height: 40em" id="news_container">
+                        <div id="carouselExampleSlidesOnly" style="position: centered; padding: 3em 3em 3em 3em; max-width: 40em; max-height: 40em; margin-left:10em; margin-right:5em"class="carousel slide" data-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
                               <img class="d-block w-100" id="news_img_1" alt="">
                                 <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_1"></label></h3>
-                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_1"></label></p>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 10px; right: 20px"><label id="news_content_1"></label></p>
                             </div>
                             <div class="carousel-item">
                               <img class="d-block w-100" id="news_img_2" alt="">
                                 <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_2"></label></h3>
-                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_2"></label></p>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 10px; right: 20px"><label id="news_content_2"></label></p>
                             </div>
                             <div class="carousel-item">
                               <img class="d-block w-100" id="news_img_3" alt="">
                                 <h3 class="text-center text-white font-weight-bold" style="background-color: rgba(255, 255, 255, 0.6); position: absolute; top: 4em; left: 3em margin-bottom: 3em; right: 20px; color: white; padding-left: 20px; padding-right: 20px"><label id="news_title_3"></label></h3>
-                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 15px; right: 20px"><label id="news_content_3"></label></p>
+                                <p class="text-center text-white font-weight-bold" style="position: centered; margin-bottom: 10px; right: 20px"><label id="news_content_3"></label></p>
                             </div>
                           </div>
                         </div>
